<resources>
    <string name="app_name">Cluedo</string>
    <string name="dialog_leave_message">Do you want to leave the game?</string>
    <string name="lobby">Lobby</string>
    <string name="max_players_message">You can\'t have more than six players.</string>
    <string name="join_game_error_game_not_found">No active games found with this ID</string>
    <string name="join_game_error_game_full">This game is full</string>
    <string name="please_log_in">Please log in to continue</string>
    <string name="join_game_error_blank_field">Please insert a game ID</string>
    <string name="join_game_error_invalid_id">A game ID must be 6 characters</string>
    <string name="choose_your_character">Choose your character</string>
    <string name="defeat">Defeat</string>
    <string name="game_not_running_toast">This game is no longer running</string>
    <string name="user_not_logged_in_toast">Not logged in</string>
    <string name="user_already_in_game_message">You are already in this game on another device</string>
    <string name="general_error_message">An error has occurred. Please check your network connection and try again</string>
    <string name="no_network_connection_message">Please check your network connection and try again</string>
    <string name="invalid_email_message">Please enter a valid email</string>
    <string name="register"><u>Register</u></string>
    <string name="preparation"><b>Preparation</b></string>
    <string name="how_to_play"><b>How to play</b></string>
    <string name="victory"><b>Victory</b></string>
    <string name="how_to_play_description">During the game you can always switch between your cards and your notes to prepare your strategy. \n\nAt your turn, you\'ll be able to make one accusation, declaring by who, how and where the murder happened. If the other players have a card that can deny your accusation they must hand it to you, you can then proceed to update your notes. \n\nIf it\'s your turn to deny an accusation and you have more than one card that can deny it, you can choose which one you want to send. Only the two players who are exchanging the card can see it.</string>
    <string name="preparation_description">This game can be played by 3 to 6 people. The host of the game can invite people by their e-mail or players can join through game ID or QR code. Once everyone has joined the lobby, the host can start the game. \n\nIf any player leaves the game when it\'s not finished the game will automatically end. \n\nThe game has 6 character cards, 6 weapon cards and 9 room cards, the objective is for you to guess Who, How and Where the victim was murdered. \n\nThe three solution cards will be kept secret since the beginning of the game, the remaining cards will be mixed and equally distributed to all the players. If there are leftover cards these will be visible to all players.</string>
    <string name="victory_description">To win the game you need to guess all the 3 secret cards: the murderer, the weapon and the room. \n\nWhen it\'s your turn you can make an accusation and declare it as final, which means the other players won\'t try to deny your accusation but you will directly look at the secret cards. If your accusation matches the secret cards, you have won! If not, the game will continue and you won\'t be allowed to play, but you will still deny accusations whenever it\'s required.</string>
    <string name="make_it_a_final_accusation">Make it a <b>final</b> accusation</string>
    <string name="continue_text">Continue</string>
    <string name="view_scores">View Scores</string>
    <string name="you_won">You won!</string>
    <string name="you_lost">You lost!</string>
    <string name="waiting_for_someone_to_respond">Waiting for %1$s to respond</string>
    <string name="showing_card_to">Showing card to %1$s</string>
    <string name="made_wrong_accusation">You made the wrong accusation. %1$s won by default</string>
    <string name="won_by_default">%1$s won by default</string>
    <string name="made_correct_accusation">%1$s made the correct accusation</string>
    <string name="you_lost_but_continue_playing">You made the wrong accusation\nYou must continue playing by responding to other players\' accusations</string>
    <string name="solution">Solution:</string>
    <string name="you_must_continue_playing_by_responding_to_accusations">You must continue playing by responding to accusations</string>
    <string name="character">Character</string>
    <string name="weapon">Weapon</string>
    <string name="room">Room</string>
    <string name="accusation">Accusation</string>
    <string name="your_hand">Your hand</string>
    <string name="leftover_cards">Leftover cards</string>
    <string name="skip">Skip</string>
    <string name="create_game">Create game</string>
    <string name="join_game">Join game</string>
    <string name="game_id">Game ID:</string>
    <string name="join_by_qr_code">Join by QR code</string>
    <string name="join">Join</string>
    <string name="or">or:</string>
    <string name="invite_players">Invite players</string>
    <string name="game_qr_code">Game QR Code</string>
    <string name="start_game">Start game</string>
    <string name="sign_in">Sign in</string>
    <string name="characters">Characters</string>
    <string name="weapons">Weapons</string>
    <string name="rooms">Rooms</string>
    <string name="save_changes">Save changes</string>
    <string name="sign_up">Sign up</string>
    <string name="game_rankings">Game Rankings:</string>
    <string name="total_scores">Total scores:</string>
    <string name="the_solution">The solution</string>
    <string name="player_lost_dialog_message">%1$s has made an incorrect accusation and lost the game. They must still respond to accusations.</string>

</resources>