<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/russian_violet">

    <TextView
        android:id="@+id/textViewPreparation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/preparation"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewPreparation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/AgrandirTextViewSmall"/>

    <ScrollView
        android:id="@+id/scrollViewPreparation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewHowToPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPreparation"
        android:background="@drawable/rounded_light_purple">
        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="12dp"
            style="@style/DefaultTextView"
            android:textSize="16sp"
            android:text="@string/preparation_description" />
    </ScrollView>

    <TextView
        android:id="@+id/textViewHowToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/how_to_play"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewHowToPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewPreparation"
        style="@style/AgrandirTextViewSmall"/>

    <ScrollView
        android:id="@+id/scrollViewHowToPlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewVictory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHowToPlay"
        android:background="@drawable/rounded_light_purple">
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/white"
            style="@style/DefaultTextView"
            android:textSize="16sp"
            android:text="@string/how_to_play_description" />
    </ScrollView>

    <TextView
        android:id="@+id/textViewVictory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/victory"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewHowToPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewVictory"
        style="@style/AgrandirTextViewSmall"/>

    <ScrollView
        android:id="@+id/scrollViewVictory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVictory"
        android:background="@drawable/rounded_light_purple">
        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/white"
            style="@style/DefaultTextView"
            android:textSize="16sp"
            android:text="@string/victory_description" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>