<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/russian_violet">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_id"
        app:layout_constraintBottom_toTopOf="@+id/editTextGameID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginBottom="16dp"
        android:theme="@style/DefaultTextView"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/joinByQrButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/join_by_qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rounded_blue_button"
        style="@style/ButtonTextView"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"/>

    <EditText
        android:id="@+id/editTextGameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="32dp"
        android:hint="123456"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/buttonJoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:background="@drawable/rounded_liliac"
        android:padding="12dp"
        style="@style/DefaultTextView"
        android:textColorHint="@color/light_grey"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGameID"
        android:background="@drawable/rounded_yellow_button"
        android:textColor="@color/russian_violet"
        style="@style/ButtonTextView"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:theme="@style/DefaultTextView"
        app:layout_constraintBottom_toTopOf="@+id/joinByQrButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="1"
        android:layout_marginBottom="16dp"/>

    <FrameLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#99000000"
        android:translationZ="5dp">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>